Fixed the Navi-menu Icon/ Hamburger menu icon on mobile device resolutions.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,9 +46,10 @@
         top: 9px;
         right: 30px;
         background-color: $background-color;
-        border: 1px solid $grey-color-light;
+        border: 0px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
+        z-index: 10;
 
         .menu-icon {
             display: block;
@@ -56,8 +57,9 @@
             width: 36px;
             height: 26px;
             line-height: 0;
-            padding-top: 10px;
+            padding-top: 12px;
             text-align: center;
+            border-style: none;
 
             > svg {
                 width: 18px;
@@ -77,6 +79,8 @@
         &:hover .trigger {
             display: block;
             padding-bottom: 5px;
+            background-color: white;
+
         }
 
         .page-link {
